# acme-shop-analytics-etl

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dags/: notification_analytics_dag.py  order_analytics_dag.py  payment_analytics_dag.py  user_analytics_dag.py
scripts/: run_all_etl_locally.py
sql/: user_analytics_legacy.sql  user_analytics_v2.sql
src/acme_shop_analytics_etl/: __init__.py  cli.py  utils.py
src/acme_shop_analytics_etl/adapters/: legacy_source.py
src/acme_shop_analytics_etl/config/: __init__.py  feature_flags.py  settings.py
src/acme_shop_analytics_etl/db/: __init__.py  connection.py  legacy_queries.py  queries.py
src/acme_shop_analytics_etl/etl/: __init__.py  common.py  deduplication.py  notification_analytics_job.py  order_analytics_job.py  payment_analytics_job.py  user_analytics_job.py
src/acme_shop_analytics_etl/logging/: __init__.py  legacy_logging.py  structured_logging.py
src/acme_shop_analytics_etl/models/: __init__.py
src/acme_shop_analytics_etl/models/v1/: __init__.py  notification.py  order.py  payment.py  user.py
src/acme_shop_analytics_etl/models/v2/: __init__.py  notification.py  order.py  payment.py  user.py
src/acme_shop_analytics_etl/pii/: __init__.py  handlers.py  legacy_pii.py
tests/: __init__.py  conftest.py  test_deduplication.py  test_feature_flags.py  test_pii_handlers.py
